khánh commit 29/6